[package]
name    = "hwaddr"
version = "0.1.5"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "MAC address handling."
repository  = "https://github.com/meh/rust-hwaddr"
keywords    = ["address", "mac", "hw", "network"]

[dependencies]
phf = "0.7"

[build-dependencies]
reqwest     = "0.9"
url         = "1.4"
regex       = "1.0"
phf_codegen = "0.7"

[features]
database = []
