[package]
name    = "hwaddr"
version = "0.1.6"
edition = "2018"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "MAC address handling."
repository  = "https://github.com/meh/rust-hwaddr"
keywords    = ["address", "mac", "hw", "network"]

[dependencies]
phf = "0.8"

[build-dependencies]
smol        = "0.1"
smol-potat  = { version = "0.3", features = ["auto"] }
reqwest     = "0.10"
url         = "2"
regex       = "1"
phf_codegen = "0.8"

[features]
database = []
