[package]
name    = "hwaddr"
version = "0.1.6"
edition = "2018"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "MAC address handling."
repository  = "https://github.com/meh/rust-hwaddr"
keywords    = ["address", "mac", "hw", "network"]

[dependencies]
phf = "0.8"

[build-dependencies]
smol        = { version = "1.0", optional = true }
reqwest     = { version = "0.10", optional = true }
url         = { version = "2", optional = true }
regex       = { version = "1", optional = true }
phf_codegen = { version = "0.8", optional = true }

[features]
database = ["smol", "reqwest", "url", "regex", "phf_codegen"]
